added unit tests to poi Dockerfile

--- a/apis/poi/web/Dockerfile
+++ b/apis/poi/web/Dockerfile
@@ -11,6 +11,13 @@ RUN dotnet publish -c Release -o out
 COPY ./appsettings.*.json /app/out/
 COPY ./appsettings.json /app/out/
 
+# unit test image
+FROM microsoft/dotnet:2.1-sdk AS test-env
+WORKDIR /app
+
+RUN dotnet restore tests/UnitTests/UnitTests.csproj 
+RUN dotnet test tests/UnitTests/UnitTests.csproj
+
 # build runtime image
 FROM microsoft/dotnet:2.1-aspnetcore-runtime
 WORKDIR /app
