moved unit tests command higher in poi dockerfile

--- a/apis/poi/web/Dockerfile
+++ b/apis/poi/web/Dockerfile
@@ -5,19 +5,15 @@ WORKDIR /app
 COPY *.csproj ./
 RUN dotnet restore
 
+# run unit test
+RUN dotnet test UnitTests/UnitTests.csproj
+
 # copy everything else and build
 COPY . ./
 RUN dotnet publish -c Release -o out
 COPY ./appsettings.*.json /app/out/
 COPY ./appsettings.json /app/out/
 
-# unit test image
-FROM microsoft/dotnet:2.1-sdk AS test-env
-WORKDIR /app
-COPY . ./
-
-RUN dotnet restore tests/UnitTests/UnitTests.csproj 
-RUN dotnet test tests/UnitTests/UnitTests.csproj
 
 # build runtime image
 FROM microsoft/dotnet:2.1-aspnetcore-runtime
