added local path to go test command for trips

--- a/apis/trips/Dockerfile
+++ b/apis/trips/Dockerfile
@@ -9,7 +9,7 @@ ENV GO111MODULE=on
 RUN go get
 
 #run tests
-RUN go test tests/...
+RUN go test ./tests/...
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o main .
 
