--- a/apis/poi/helm/values.yaml
+++ b/apis/poi/helm/values.yaml
@@ -4,7 +4,7 @@
 
 replicaCount: 2
 repository:
-  image: acrreplace.azurecr.io/devopsoh/imagereplace
+  image: openhackff78acr.azurecr.io/devopsoh/api-poi
   tag: latest
   pullPolicy: Always
 image:
@@ -19,7 +19,7 @@ ingress:
     kubernetes.io/ingress.class: traefik
   rules:
     endpoint:
-      host: changeme
+      host: openhackff78aks.eastus.cloudapp.azure.com
       paths:
       - path: /api/poi
         serviceName: api-poi-svc
