added helm install to trips jenkinsfile-ci

--- a/apis/trips/helm/values.yaml
+++ b/apis/trips/helm/values.yaml
@@ -20,7 +20,7 @@ ingress:
     kubernetes.io/ingress.class: traefik
   rules:
     endpoint:
-      host: changeme
+      host: openhackff78aks.eastus.cloudapp.azure.com
       paths:
       - path: /api/trips
         serviceName: api-trip-svc
