user-java helm changes

--- a/apis/userprofile/helm/values.yaml
+++ b/apis/userprofile/helm/values.yaml
@@ -18,7 +18,7 @@ ingress:
     kubernetes.io/ingress.class: traefik
   rules:
     endpoint:
-      host: changeme
+      host: openhackff78aks.eastus.cloudapp.azure.com
       paths:
       - path: /api/user
         serviceName: api-user-svc
