--- a/apis/poi/helm/templates/deployment.yaml
+++ b/apis/poi/helm/templates/deployment.yaml
@@ -5,7 +5,13 @@ metadata:
   labels:
     deploy: {{ .Values.image.label }}
 spec:
+  progressDeadlineSeconds: 60
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    rollingUpdate:
+      maxUnavailable: {{ .Values.rollingUpdate.maxUnavailablePercentage}}
+      maxSurge: {{ .Values.rollingUpdate.maxSurgePercentage}}
+    type: RollingUpdate  
   selector:
     matchLabels:
       app: {{ .Values.image.label }}
@@ -18,25 +24,24 @@ spec:
       - image: "{{ .Values.repository.image }}:{{ .Values.repository.tag }}"
         imagePullPolicy: {{ .Values.repository.pullPolicy }}
         name: {{ .Values.image.name }}
-         livenessProbe:
-           httpGet:
-             path: /api/healthcheck/poi
-             port: {{ .Values.image.containerPort }}
-           initialDelaySeconds: 10
-           periodSeconds: 30
-         readinessProbe:
-           httpGet:
-             path: /api/healthcheck/poi
-             port: {{ .Values.image.containerPort }}
-           initialDelaySeconds: 5
-           periodSeconds: 5
         ports:
           - containerPort: {{ .Values.image.containerPort }}
             name: http
             protocol: TCP
           - containerPort: 443
             name: https
-            protocol: TCP
+            protocol: TCP        
+        livenessProbe:
+          tcpSocket:
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /api/healthcheck/poi
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 3
         env:
           - name: SQL_USER
             valueFrom:
